--- a/public/style.css
+++ b/public/style.css
@@ -558,6 +558,14 @@ video {
   display: flex;
 }
 
+.h-\[100\] {
+  height: 100;
+}
+
+.h-\[100\%\] {
+  height: 100%;
+}
+
 .w-\[30\%\] {
   width: 30%;
 }
