--- a/public/style.css
+++ b/public/style.css
@@ -554,6 +554,71 @@ video {
   display: none;
 }
 
+.m-\[55px\] {
+  margin: 55px;
+}
+
+.m-\[px\] {
+  margin: px;
+}
+
+.mx-\[55px\] {
+  margin-left: 55px;
+  margin-right: 55px;
+}
+
+.mx-\[65px\] {
+  margin-left: 65px;
+  margin-right: 65px;
+}
+
+.my-\[\] {
+  margin-top: ;
+  margin-bottom: ;
+}
+
+.my-\[55px\] {
+  margin-top: 55px;
+  margin-bottom: 55px;
+}
+
+.mx-\[50px\] {
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
+.ml-\[65px\] {
+  margin-left: 65px;
+}
+
+.mt-\[55px\] {
+  margin-top: 55px;
+}
+
+.ml-\[75px\] {
+  margin-left: 75px;
+}
+
+.mt-\[\] {
+  margin-top: ;
+}
+
+.mt-\[20px\] {
+  margin-top: 20px;
+}
+
+.mt-\[75px\] {
+  margin-top: 75px;
+}
+
+.mt-\[80\%\] {
+  margin-top: 80%;
+}
+
+.mt-\[80px\] {
+  margin-top: 80px;
+}
+
 .flex {
   display: flex;
 }
@@ -566,8 +631,72 @@ video {
   height: 100%;
 }
 
+.h-\[100vh\] {
+  height: 100vh;
+}
+
+.h-\[70vh\] {
+  height: 70vh;
+}
+
+.h-\[\] {
+  height: ;
+}
+
+.h-\[20px\] {
+  height: 20px;
+}
+
+.h-\[50px\] {
+  height: 50px;
+}
+
 .w-\[30\%\] {
   width: 30%;
+}
+
+.w-\[100\%\] {
+  width: 100%;
+}
+
+.w-\[90\%\] {
+  width: 90%;
+}
+
+.w-\[90\] {
+  width: 90;
+}
+
+.w-\[90vw\] {
+  width: 90vw;
+}
+
+.w-\[\] {
+  width: ;
+}
+
+.w-\[100v\] {
+  width: 100v;
+}
+
+.w-\[100vw\] {
+  width: 100vw;
+}
+
+.w-\[\%\] {
+  width: %;
+}
+
+.w-\[25\%\] {
+  width: 25%;
+}
+
+.w-\[5\%\] {
+  width: 5%;
+}
+
+.w-\[35\%\] {
+  width: 35%;
 }
 
 .flex-wrap {
@@ -611,9 +740,57 @@ video {
   padding: 50px;
 }
 
+.p-\[\] {
+  padding: ;
+}
+
+.p-\[10px\] {
+  padding: 10px;
+}
+
+.p-\[0px\] {
+  padding: 0px;
+}
+
+.p-\[30px\] {
+  padding: 30px;
+}
+
+.p-\[55px\] {
+  padding: 55px;
+}
+
+.p-\[20px\] {
+  padding: 20px;
+}
+
 .px-\[50px\] {
   padding-left: 50px;
   padding-right: 50px;
+}
+
+.px-\[30px\] {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.py-\[\] {
+  padding-top: ;
+  padding-bottom: ;
+}
+
+.py-\[30px\] {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.py-\[20px\] {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.pt-\[20px\] {
+  padding-top: 20px;
 }
 
 .text-2xl {
@@ -631,12 +808,34 @@ video {
   line-height: 1.25rem;
 }
 
+.text-6xl {
+  font-size: 3.75rem;
+  line-height: 1;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
 .font-bold {
   font-weight: 700;
 }
 
 .font-normal {
   font-weight: 400;
+}
+
+.font-light {
+  font-weight: 300;
+}
+
+.font-extralight {
+  font-weight: 200;
+}
+
+.font-thin {
+  font-weight: 100;
 }
 
 .text-white {
@@ -646,4 +845,56 @@ video {
 
 .hover\:border-b-2:hover {
   border-bottom-width: 2px;
+}
+
+@media (min-width: 540px) {
+  .md\:w-3 {
+    width: 0.75rem;
+  }
+
+  .md\:w-\[3\] {
+    width: 3;
+  }
+
+  .md\:w-\[35\%\] {
+    width: 35%;
+  }
+}
+
+@media (min-width: 768px) {
+  .lg\:w-\[30\%\] {
+    width: 30%;
+  }
+
+  .lg\:w-\[35\%\] {
+    width: 35%;
+  }
+
+  .lg\:w-\[55\%\] {
+    width: 55%;
+  }
+
+  .lg\:w-\[\%\] {
+    width: %;
+  }
+
+  .lg\:w-\[50\%\] {
+    width: 50%;
+  }
+
+  .lg\:w-\[45\%\] {
+    width: 45%;
+  }
+
+  .lg\:w-\[40\%\] {
+    width: 40%;
+  }
+
+  .lg\:w-\[3\%\] {
+    width: 3%;
+  }
+
+  .lg\:w-\[37\%\] {
+    width: 37%;
+  }
 }
