--- a/public/style.css
+++ b/public/style.css
@@ -554,32 +554,16 @@ video {
   display: none;
 }
 
-.m-\[55px\] {
-  margin: 55px;
+.m-\[40px\] {
+  margin: 40px;
 }
 
-.m-\[px\] {
-  margin: px;
+.m-\[30px\] {
+  margin: 30px;
 }
 
-.mx-\[55px\] {
-  margin-left: 55px;
-  margin-right: 55px;
-}
-
-.mx-\[65px\] {
-  margin-left: 65px;
-  margin-right: 65px;
-}
-
-.my-\[\] {
-  margin-top: ;
-  margin-bottom: ;
-}
-
-.my-\[55px\] {
-  margin-top: 55px;
-  margin-bottom: 55px;
+.m-auto {
+  margin: auto;
 }
 
 .mx-\[50px\] {
@@ -587,52 +571,39 @@ video {
   margin-right: 50px;
 }
 
-.ml-\[65px\] {
-  margin-left: 65px;
+.my-\[\] {
+  margin-top: ;
+  margin-bottom: ;
 }
 
-.mt-\[55px\] {
-  margin-top: 55px;
+.my-\[20px\] {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.my-\[0px\] {
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 .ml-\[75px\] {
   margin-left: 75px;
 }
 
-.mt-\[\] {
-  margin-top: ;
-}
-
-.mt-\[20px\] {
-  margin-top: 20px;
-}
-
-.mt-\[75px\] {
-  margin-top: 75px;
-}
-
-.mt-\[80\%\] {
-  margin-top: 80%;
-}
-
 .mt-\[80px\] {
   margin-top: 80px;
 }
 
+.mt-\[0px\] {
+  margin-top: 0px;
+}
+
+.mt-\[30px\] {
+  margin-top: 30px;
+}
+
 .flex {
   display: flex;
-}
-
-.h-\[100\] {
-  height: 100;
-}
-
-.h-\[100\%\] {
-  height: 100%;
-}
-
-.h-\[100vh\] {
-  height: 100vh;
 }
 
 .h-\[70vh\] {
@@ -643,60 +614,56 @@ video {
   height: ;
 }
 
-.h-\[20px\] {
-  height: 20px;
+.h-\[200px\] {
+  height: 200px;
 }
 
-.h-\[50px\] {
-  height: 50px;
+.h-\[300px\] {
+  height: 300px;
 }
 
-.w-\[30\%\] {
-  width: 30%;
-}
-
-.w-\[100\%\] {
-  width: 100%;
-}
-
-.w-\[90\%\] {
-  width: 90%;
-}
-
-.w-\[90\] {
-  width: 90;
-}
-
-.w-\[90vw\] {
-  width: 90vw;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[100v\] {
-  width: 100v;
+.h-\[500px\] {
+  height: 500px;
 }
 
 .w-\[100vw\] {
   width: 100vw;
 }
 
-.w-\[\%\] {
-  width: %;
+.w-\[\] {
+  width: ;
 }
 
-.w-\[25\%\] {
-  width: 25%;
+.w-\[250px\] {
+  width: 250px;
 }
 
-.w-\[5\%\] {
-  width: 5%;
+.w-\[100\] {
+  width: 100;
 }
 
-.w-\[35\%\] {
-  width: 35%;
+.w-\[100\%\] {
+  width: 100%;
+}
+
+.w-\[400px\] {
+  width: 400px;
+}
+
+.w-\[500px\] {
+  width: 500px;
+}
+
+.max-w-\[\] {
+  max-width: ;
+}
+
+.max-w-\[300px\] {
+  max-width: 300px;
+}
+
+.max-w-\[500px\] {
+  max-width: 500px;
 }
 
 .flex-wrap {
@@ -721,7 +688,7 @@ video {
 }
 
 .bg-hero-pattern {
-  background-image: url('/images/image-hero.jpg');
+  background-image: url('./images/image-hero.jpg');
 }
 
 .bg-cover {
@@ -736,37 +703,8 @@ video {
   background-repeat: no-repeat;
 }
 
-.p-\[50px\] {
-  padding: 50px;
-}
-
-.p-\[\] {
-  padding: ;
-}
-
-.p-\[10px\] {
-  padding: 10px;
-}
-
-.p-\[0px\] {
-  padding: 0px;
-}
-
 .p-\[30px\] {
   padding: 30px;
-}
-
-.p-\[55px\] {
-  padding: 55px;
-}
-
-.p-\[20px\] {
-  padding: 20px;
-}
-
-.px-\[50px\] {
-  padding-left: 50px;
-  padding-right: 50px;
 }
 
 .px-\[30px\] {
@@ -774,14 +712,9 @@ video {
   padding-right: 30px;
 }
 
-.py-\[\] {
-  padding-top: ;
-  padding-bottom: ;
-}
-
-.py-\[30px\] {
-  padding-top: 30px;
-  padding-bottom: 30px;
+.px-\[50px\] {
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
 .py-\[20px\] {
@@ -789,28 +722,9 @@ video {
   padding-bottom: 20px;
 }
 
-.pt-\[20px\] {
-  padding-top: 20px;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
-}
-
-.text-sm {
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
-
-.text-6xl {
-  font-size: 3.75rem;
-  line-height: 1;
 }
 
 .text-5xl {
@@ -818,20 +732,18 @@ video {
   line-height: 1;
 }
 
+.text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .font-bold {
   font-weight: 700;
-}
-
-.font-normal {
-  font-weight: 400;
-}
-
-.font-light {
-  font-weight: 300;
-}
-
-.font-extralight {
-  font-weight: 200;
 }
 
 .font-thin {
@@ -848,52 +760,12 @@ video {
 }
 
 @media (min-width: 540px) {
-  .md\:w-3 {
-    width: 0.75rem;
-  }
-
-  .md\:w-\[3\] {
-    width: 3;
-  }
-
   .md\:w-\[35\%\] {
     width: 35%;
   }
 }
 
 @media (min-width: 768px) {
-  .lg\:w-\[30\%\] {
-    width: 30%;
-  }
-
-  .lg\:w-\[35\%\] {
-    width: 35%;
-  }
-
-  .lg\:w-\[55\%\] {
-    width: 55%;
-  }
-
-  .lg\:w-\[\%\] {
-    width: %;
-  }
-
-  .lg\:w-\[50\%\] {
-    width: 50%;
-  }
-
-  .lg\:w-\[45\%\] {
-    width: 45%;
-  }
-
-  .lg\:w-\[40\%\] {
-    width: 40%;
-  }
-
-  .lg\:w-\[3\%\] {
-    width: 3%;
-  }
-
   .lg\:w-\[37\%\] {
     width: 37%;
   }
