--- a/public/style.css
+++ b/public/style.css
@@ -554,16 +554,53 @@ video {
   display: none;
 }
 
-.m-\[40px\] {
-  margin: 40px;
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.left-80 {
+  left: 20rem;
+}
+
+.top-20 {
+  top: 5rem;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .m-\[30px\] {
   margin: 30px;
 }
 
-.m-auto {
-  margin: auto;
+.m-\[20px\] {
+  margin: 20px;
+}
+
+.m-\[\] {
+  margin: ;
+}
+
+.m-\[450px\] {
+  margin: 450px;
+}
+
+.m-\[50px\] {
+  margin: 50px;
+}
+
+.m-\[150px\] {
+  margin: 150px;
+}
+
+.mx-\[40px\] {
+  margin-left: 40px;
+  margin-right: 40px;
 }
 
 .mx-\[50px\] {
@@ -571,9 +608,9 @@ video {
   margin-right: 50px;
 }
 
-.my-\[\] {
-  margin-top: ;
-  margin-bottom: ;
+.my-40 {
+  margin-top: 10rem;
+  margin-bottom: 10rem;
 }
 
 .my-\[20px\] {
@@ -581,93 +618,253 @@ video {
   margin-bottom: 20px;
 }
 
-.my-\[0px\] {
-  margin-top: 0px;
-  margin-bottom: 0px;
+.mx-\[\] {
+  margin-left: ;
+  margin-right: ;
+}
+
+.mx-\[30px\] {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.mx-\[10px\] {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
+
+.mx-52 {
+  margin-left: 13rem;
+  margin-right: 13rem;
+}
+
+.mx-96 {
+  margin-left: 24rem;
+  margin-right: 24rem;
+}
+
+.mx-\[150px\] {
+  margin-left: 150px;
+  margin-right: 150px;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.mx-\[0px\] {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
+.mx-\[70px\] {
+  margin-left: 70px;
+  margin-right: 70px;
+}
+
+.mx-\[170px\] {
+  margin-left: 170px;
+  margin-right: 170px;
+}
+
+.mx-\[270px\] {
+  margin-left: 270px;
+  margin-right: 270px;
+}
+
+.mx-\[10\.3rem\] {
+  margin-left: 10.3rem;
+  margin-right: 10.3rem;
+}
+
+.mx-\[13rem\] {
+  margin-left: 13rem;
+  margin-right: 13rem;
+}
+
+.my-\[10rem\] {
+  margin-top: 10rem;
+  margin-bottom: 10rem;
+}
+
+.my-\[30px\] {
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.my-\[px\] {
+  margin-top: px;
+  margin-bottom: px;
+}
+
+.my-\[6\.2\] {
+  margin-top: 6.2;
+  margin-bottom: 6.2;
+}
+
+.my-\[6\.25rem\] {
+  margin-top: 6.25rem;
+  margin-bottom: 6.25rem;
+}
+
+.my-\[150px\] {
+  margin-top: 150px;
+  margin-bottom: 150px;
+}
+
+.my-\[12rem\] {
+  margin-top: 12rem;
+  margin-bottom: 12rem;
+}
+
+.my-\[13rem\] {
+  margin-top: 13rem;
+  margin-bottom: 13rem;
+}
+
+.my-\[15rem\] {
+  margin-top: 15rem;
+  margin-bottom: 15rem;
+}
+
+.my-\[2000px\] {
+  margin-top: 2000px;
+  margin-bottom: 2000px;
+}
+
+.my-\[200px\] {
+  margin-top: 200px;
+  margin-bottom: 200px;
+}
+
+.my-\[300px\] {
+  margin-top: 300px;
+  margin-bottom: 300px;
+}
+
+.mx-\[200px\] {
+  margin-left: 200px;
+  margin-right: 200px;
+}
+
+.mx-\[250px\] {
+  margin-left: 250px;
+  margin-right: 250px;
+}
+
+.mx-\[220px\] {
+  margin-left: 220px;
+  margin-right: 220px;
 }
 
 .ml-\[75px\] {
   margin-left: 75px;
 }
 
+.ml-\[95px\] {
+  margin-left: 95px;
+}
+
 .mt-\[80px\] {
   margin-top: 80px;
 }
 
-.mt-\[0px\] {
-  margin-top: 0px;
+.ml-\[195px\] {
+  margin-left: 195px;
 }
 
-.mt-\[30px\] {
-  margin-top: 30px;
+.ml-\[15px\] {
+  margin-left: 15px;
+}
+
+.ml-\[165px\] {
+  margin-left: 165px;
+}
+
+.ml-\[10\.3\] {
+  margin-left: 10.3;
+}
+
+.ml-\[10\.313rem\] {
+  margin-left: 10.313rem;
+}
+
+.ml-\[10\.3rem\] {
+  margin-left: 10.3rem;
 }
 
 .flex {
   display: flex;
 }
 
+.h-\[260px\] {
+  height: 260px;
+}
+
+.h-\[50px\] {
+  height: 50px;
+}
+
 .h-\[70vh\] {
   height: 70vh;
+}
+
+.h-\[240px\] {
+  height: 240px;
+}
+
+.h-\[250px\] {
+  height: 250px;
 }
 
 .h-\[\] {
   height: ;
 }
 
-.h-\[200px\] {
-  height: 200px;
-}
-
-.h-\[300px\] {
-  height: 300px;
-}
-
-.h-\[500px\] {
-  height: 500px;
-}
-
-.w-\[100vw\] {
-  width: 100vw;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[250px\] {
-  width: 250px;
-}
-
-.w-\[100\] {
-  width: 100;
+.h-\[40px\] {
+  height: 40px;
 }
 
 .w-\[100\%\] {
   width: 100%;
 }
 
-.w-\[400px\] {
-  width: 400px;
+.w-\[430px\] {
+  width: 430px;
 }
 
-.w-\[500px\] {
-  width: 500px;
+.w-\[50px\] {
+  width: 50px;
 }
 
-.max-w-\[\] {
-  max-width: ;
+.w-\[100px\] {
+  width: 100px;
 }
 
-.max-w-\[300px\] {
-  max-width: 300px;
+.max-w-\[600px\] {
+  max-width: 600px;
 }
 
-.max-w-\[500px\] {
-  max-width: 500px;
+.flex-row {
+  flex-direction: row;
 }
 
 .flex-wrap {
   flex-wrap: wrap;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 .justify-between {
@@ -685,6 +882,16 @@ video {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
 }
 
 .bg-hero-pattern {
@@ -707,9 +914,34 @@ video {
   padding: 30px;
 }
 
+.p-\[\] {
+  padding: ;
+}
+
+.p-\[20px\] {
+  padding: 20px;
+}
+
+.p-\[10px\] {
+  padding: 10px;
+}
+
+.p-\[5rem\] {
+  padding: 5rem;
+}
+
+.p-\[7rem\] {
+  padding: 7rem;
+}
+
 .px-\[30px\] {
   padding-left: 30px;
   padding-right: 30px;
+}
+
+.px-\[40px\] {
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .px-\[50px\] {
@@ -720,6 +952,90 @@ video {
 .py-\[20px\] {
   padding-top: 20px;
   padding-bottom: 20px;
+}
+
+.py-\[30px\] {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
+.px-\[\] {
+  padding-left: ;
+  padding-right: ;
+}
+
+.px-\[5px\] {
+  padding-left: 5px;
+  padding-right: 5px;
+}
+
+.px-\[10px\] {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.py-\[10px\] {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.px-\[7rem\] {
+  padding-left: 7rem;
+  padding-right: 7rem;
+}
+
+.px-\[8rem\] {
+  padding-left: 8rem;
+  padding-right: 8rem;
+}
+
+.px-\[10rem\] {
+  padding-left: 10rem;
+  padding-right: 10rem;
+}
+
+.pt-\[75px\] {
+  padding-top: 75px;
+}
+
+.pt-\[5px\] {
+  padding-top: 5px;
+}
+
+.pt-\[95px\] {
+  padding-top: 95px;
+}
+
+.pb-\[95px\] {
+  padding-bottom: 95px;
+}
+
+.pb-\[195px\] {
+  padding-bottom: 195px;
+}
+
+.pt-\[195px\] {
+  padding-top: 195px;
+}
+
+.pt-\[100px\] {
+  padding-top: 100px;
+}
+
+.pt-\[6\.\] {
+  padding-top: 6.;
+}
+
+.pt-\[6\.2\] {
+  padding-top: 6.2;
+}
+
+.pt-\[6\.2rem\] {
+  padding-top: 6.2rem;
+}
+
+.pt-\[5\.2rem\] {
+  padding-top: 5.2rem;
 }
 
 .text-4xl {
@@ -737,9 +1053,19 @@ video {
   line-height: 1.25rem;
 }
 
-.text-3xl {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
 .font-bold {
@@ -748,6 +1074,14 @@ video {
 
 .font-thin {
   font-weight: 100;
+}
+
+.font-light {
+  font-weight: 300;
+}
+
+.font-normal {
+  font-weight: 400;
 }
 
 .text-white {
@@ -759,13 +1093,17 @@ video {
   border-bottom-width: 2px;
 }
 
-@media (min-width: 540px) {
+@media (min-width: 768px) {
   .md\:w-\[35\%\] {
     width: 35%;
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1024px) {
+  .lg\:hidden {
+    display: none;
+  }
+
   .lg\:w-\[37\%\] {
     width: 37%;
   }
