--- a/public/style.css
+++ b/public/style.css
@@ -562,120 +562,32 @@ video {
   position: relative;
 }
 
+.bottom-5 {
+  bottom: 1.25rem;
+}
+
+.left-0 {
+  left: 0px;
+}
+
 .left-80 {
   left: 20rem;
+}
+
+.top-0 {
+  top: 0px;
 }
 
 .top-20 {
   top: 5rem;
 }
 
+.z-10 {
+  z-index: 10;
+}
+
 .z-50 {
   z-index: 50;
-}
-
-.m-\[30px\] {
-  margin: 30px;
-}
-
-.m-\[20px\] {
-  margin: 20px;
-}
-
-.m-\[\] {
-  margin: ;
-}
-
-.m-\[450px\] {
-  margin: 450px;
-}
-
-.m-\[50px\] {
-  margin: 50px;
-}
-
-.m-\[150px\] {
-  margin: 150px;
-}
-
-.mx-\[40px\] {
-  margin-left: 40px;
-  margin-right: 40px;
-}
-
-.mx-\[50px\] {
-  margin-left: 50px;
-  margin-right: 50px;
-}
-
-.my-40 {
-  margin-top: 10rem;
-  margin-bottom: 10rem;
-}
-
-.my-\[20px\] {
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-.mx-\[\] {
-  margin-left: ;
-  margin-right: ;
-}
-
-.mx-\[30px\] {
-  margin-left: 30px;
-  margin-right: 30px;
-}
-
-.mx-\[10px\] {
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-.mx-5 {
-  margin-left: 1.25rem;
-  margin-right: 1.25rem;
-}
-
-.mx-52 {
-  margin-left: 13rem;
-  margin-right: 13rem;
-}
-
-.mx-96 {
-  margin-left: 24rem;
-  margin-right: 24rem;
-}
-
-.mx-\[150px\] {
-  margin-left: 150px;
-  margin-right: 150px;
-}
-
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.mx-\[0px\] {
-  margin-left: 0px;
-  margin-right: 0px;
-}
-
-.mx-\[70px\] {
-  margin-left: 70px;
-  margin-right: 70px;
-}
-
-.mx-\[170px\] {
-  margin-left: 170px;
-  margin-right: 170px;
-}
-
-.mx-\[270px\] {
-  margin-left: 270px;
-  margin-right: 270px;
 }
 
 .mx-\[10\.3rem\] {
@@ -688,54 +600,24 @@ video {
   margin-right: 13rem;
 }
 
+.mx-\[200px\] {
+  margin-left: 200px;
+  margin-right: 200px;
+}
+
+.mx-\[30px\] {
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.mx-\[50px\] {
+  margin-left: 50px;
+  margin-right: 50px;
+}
+
 .my-\[10rem\] {
   margin-top: 10rem;
   margin-bottom: 10rem;
-}
-
-.my-\[30px\] {
-  margin-top: 30px;
-  margin-bottom: 30px;
-}
-
-.my-\[px\] {
-  margin-top: px;
-  margin-bottom: px;
-}
-
-.my-\[6\.2\] {
-  margin-top: 6.2;
-  margin-bottom: 6.2;
-}
-
-.my-\[6\.25rem\] {
-  margin-top: 6.25rem;
-  margin-bottom: 6.25rem;
-}
-
-.my-\[150px\] {
-  margin-top: 150px;
-  margin-bottom: 150px;
-}
-
-.my-\[12rem\] {
-  margin-top: 12rem;
-  margin-bottom: 12rem;
-}
-
-.my-\[13rem\] {
-  margin-top: 13rem;
-  margin-bottom: 13rem;
-}
-
-.my-\[15rem\] {
-  margin-top: 15rem;
-  margin-bottom: 15rem;
-}
-
-.my-\[2000px\] {
-  margin-top: 2000px;
-  margin-bottom: 2000px;
 }
 
 .my-\[200px\] {
@@ -743,68 +625,34 @@ video {
   margin-bottom: 200px;
 }
 
-.my-\[300px\] {
-  margin-top: 300px;
-  margin-bottom: 300px;
+.my-\[20px\] {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-.mx-\[200px\] {
-  margin-left: 200px;
-  margin-right: 200px;
-}
-
-.mx-\[250px\] {
-  margin-left: 250px;
-  margin-right: 250px;
-}
-
-.mx-\[220px\] {
-  margin-left: 220px;
-  margin-right: 220px;
+.my-\[30px\] {
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .ml-\[75px\] {
   margin-left: 75px;
 }
 
-.ml-\[95px\] {
-  margin-left: 95px;
-}
-
 .mt-\[80px\] {
   margin-top: 80px;
-}
-
-.ml-\[195px\] {
-  margin-left: 195px;
-}
-
-.ml-\[15px\] {
-  margin-left: 15px;
-}
-
-.ml-\[165px\] {
-  margin-left: 165px;
-}
-
-.ml-\[10\.3\] {
-  margin-left: 10.3;
-}
-
-.ml-\[10\.313rem\] {
-  margin-left: 10.313rem;
-}
-
-.ml-\[10\.3rem\] {
-  margin-left: 10.3rem;
 }
 
 .flex {
   display: flex;
 }
 
-.h-\[260px\] {
-  height: 260px;
+.h-\[250px\] {
+  height: 250px;
+}
+
+.h-\[40px\] {
+  height: 40px;
 }
 
 .h-\[50px\] {
@@ -815,24 +663,16 @@ video {
   height: 70vh;
 }
 
-.h-\[240px\] {
-  height: 240px;
-}
-
-.h-\[250px\] {
-  height: 250px;
-}
-
-.h-\[\] {
-  height: ;
-}
-
-.h-\[40px\] {
-  height: 40px;
+.h-full {
+  height: 100%;
 }
 
 .w-\[100\%\] {
   width: 100%;
+}
+
+.w-\[100px\] {
+  width: 100px;
 }
 
 .w-\[430px\] {
@@ -843,12 +683,16 @@ video {
   width: 50px;
 }
 
-.w-\[100px\] {
-  width: 100px;
+.w-full {
+  width: 100%;
 }
 
 .max-w-\[600px\] {
   max-width: 600px;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .flex-row {
@@ -875,6 +719,14 @@ video {
   gap: 0.75rem;
 }
 
+.gap-4 {
+  gap: 1rem;
+}
+
+.gap-5 {
+  gap: 1.25rem;
+}
+
 .border-2 {
   border-width: 2px;
 }
@@ -884,14 +736,14 @@ video {
   border-color: rgb(255 255 255 / var(--tw-border-opacity, 1));
 }
 
-.bg-white {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
 .bg-hero-pattern {
@@ -910,6 +762,10 @@ video {
   background-repeat: no-repeat;
 }
 
+.p-\[22px\] {
+  padding: 22px;
+}
+
 .p-\[30px\] {
   padding: 30px;
 }
@@ -918,20 +774,8 @@ video {
   padding: ;
 }
 
-.p-\[20px\] {
-  padding: 20px;
-}
-
-.p-\[10px\] {
-  padding: 10px;
-}
-
-.p-\[5rem\] {
-  padding: 5rem;
-}
-
-.p-\[7rem\] {
-  padding: 7rem;
+.p-\[40px\] {
+  padding: 40px;
 }
 
 .px-\[30px\] {
@@ -949,93 +793,63 @@ video {
   padding-right: 50px;
 }
 
-.py-\[20px\] {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-.py-\[30px\] {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.px-\[\] {
-  padding-left: ;
-  padding-right: ;
-}
-
-.px-\[5px\] {
-  padding-left: 5px;
-  padding-right: 5px;
-}
-
-.px-\[10px\] {
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
 .py-\[10px\] {
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
-.px-\[7rem\] {
-  padding-left: 7rem;
-  padding-right: 7rem;
+.py-\[20px\] {
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
 
-.px-\[8rem\] {
-  padding-left: 8rem;
-  padding-right: 8rem;
+.py-\[5rem\] {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 
-.px-\[10rem\] {
-  padding-left: 10rem;
-  padding-right: 10rem;
+.py-\[\] {
+  padding-top: ;
+  padding-bottom: ;
 }
 
-.pt-\[75px\] {
-  padding-top: 75px;
-}
-
-.pt-\[5px\] {
+.py-\[5px\] {
   padding-top: 5px;
+  padding-bottom: 5px;
 }
 
-.pt-\[95px\] {
-  padding-top: 95px;
+.py-\[15px\] {
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
-.pb-\[95px\] {
-  padding-bottom: 95px;
+.py-\[25px\] {
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
 
-.pb-\[195px\] {
-  padding-bottom: 195px;
+.py-\[3px\] {
+  padding-top: 3px;
+  padding-bottom: 3px;
 }
 
-.pt-\[195px\] {
-  padding-top: 195px;
-}
-
-.pt-\[100px\] {
-  padding-top: 100px;
-}
-
-.pt-\[6\.\] {
-  padding-top: 6.;
-}
-
-.pt-\[6\.2\] {
-  padding-top: 6.2;
-}
-
-.pt-\[6\.2rem\] {
-  padding-top: 6.2rem;
+.py-\[2px\] {
+  padding-top: 2px;
+  padding-bottom: 2px;
 }
 
 .pt-\[5\.2rem\] {
   padding-top: 5.2rem;
+}
+
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
 }
 
 .text-4xl {
@@ -1058,22 +872,8 @@ video {
   line-height: 1rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-  line-height: 1.75rem;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
 .font-bold {
   font-weight: 700;
-}
-
-.font-thin {
-  font-weight: 100;
 }
 
 .font-light {
@@ -1084,13 +884,35 @@ video {
   font-weight: 400;
 }
 
+.font-thin {
+  font-weight: 100;
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.opacity-0 {
+  opacity: 0;
+}
+
+.transition-opacity {
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-300 {
+  transition-duration: 300ms;
+}
+
 .hover\:border-b-2:hover {
   border-bottom-width: 2px;
+}
+
+.hover\:opacity-20:hover {
+  opacity: 0.2;
 }
 
 @media (min-width: 768px) {
