--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .form-group {
+    @apply w-full;
+  }
+
+  .form-field {
+    @apply px-2 py-1.5 border rounded-md block w-full;
+  }
+
+  .form-label {
+    @apply text-sm font-normal text-gray-800 mb-2;
+  }
+
+  .form-group:nth-child(3) {
+    @apply col-span-full;
+  }
+}
